machine learning updates

--- a/Machine Learning/model_1.ipynb
+++ b/Machine Learning/model_1.ipynb
@@ -238,7 +238,10 @@
     "df = pd.read_csv(\"../Data/ttc_subway_delay_2018_2019_for_machine_learning.csv\", encoding='unicode_escape')\n",
     "# Drop the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
-    "df.head()"
+    "df.head()\n",
+    "# one hot encoding for stations - 1 or 0. will create many columns\n",
+    "# min_delay\n",
+    "# time series model"
    ]
   },
   {
@@ -379,7 +382,7 @@
    ],
    "source": [
     "# Drop the null rows, and everything that is not a float except station\n",
-    "df = df.dropna().drop(['date','time','day','code','bound','line','code_info','line_name','month','time_range'], axis=1)\n",
+    "df = df.dropna().drop(['id','date','time','day','code','bound','line','code_info','line_name','month','time_range',\"latitude\",\"longitude\"], axis=1)\n",
     "df.head()"
    ]
   },
@@ -746,6 +749,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prediction result\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -821,6 +834,13 @@
     "print(f\"Training Data Score: {model2.score(X_train_scaled, y_train)}\")\n",
     "print(f\"Testing Data Score: {model2.score(X_test_scaled, y_test)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
