Updated ML and ETL
Updated ML and ETL

--- a/ttc-2019-delays/TTC_subway_delay_ETL.ipynb
+++ b/ttc-2019-delays/TTC_subway_delay_ETL.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,8 @@
        "      <th>min_gap</th>\n",
        "      <th>bound</th>\n",
        "      <th>line</th>\n",
-       "      <th>...</th>\n",
+       "      <th>vehicle</th>\n",
+       "      <th>code_info</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>line_name</th>\n",
@@ -85,8 +86,6 @@
        "      <th>month_number</th>\n",
        "      <th>hour</th>\n",
        "      <th>year</th>\n",
-       "      <th>Index</th>\n",
-       "      <th>Check</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -102,7 +101,8 @@
        "      <td>16</td>\n",
        "      <td>N</td>\n",
        "      <td>YU</td>\n",
-       "      <td>...</td>\n",
+       "      <td>6061</td>\n",
+       "      <td>ATC Project</td>\n",
        "      <td>43.674584</td>\n",
        "      <td>-79.40683</td>\n",
        "      <td>Yonge University Spadina</td>\n",
@@ -111,8 +111,6 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2019</td>\n",
-       "      <td>43466DUPONT STATION11</td>\n",
-       "      <td>#REF!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -126,7 +124,8 @@
        "      <td>16</td>\n",
        "      <td>S</td>\n",
        "      <td>YU</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5656</td>\n",
+       "      <td>ATC RC&amp;S Equipment</td>\n",
        "      <td>43.699209</td>\n",
        "      <td>-79.435819</td>\n",
        "      <td>Yonge University Spadina</td>\n",
@@ -135,8 +134,6 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2019</td>\n",
-       "      <td>43466EGLINTON WEST STATION11</td>\n",
-       "      <td>#REF!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -150,7 +147,8 @@
        "      <td>11</td>\n",
        "      <td>N</td>\n",
        "      <td>YU</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5381</td>\n",
+       "      <td>ATC RC&amp;S Equipment</td>\n",
        "      <td>43.674584</td>\n",
        "      <td>-79.40683</td>\n",
        "      <td>Yonge University Spadina</td>\n",
@@ -159,8 +157,6 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2019</td>\n",
-       "      <td>43466DUPONT STATION6</td>\n",
-       "      <td>#REF!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -174,7 +170,8 @@
        "      <td>9</td>\n",
        "      <td>N</td>\n",
        "      <td>YU</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5571</td>\n",
+       "      <td>ATC RC&amp;S Equipment</td>\n",
        "      <td>43.683888</td>\n",
        "      <td>-79.415113</td>\n",
        "      <td>Yonge University Spadina</td>\n",
@@ -183,8 +180,6 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2019</td>\n",
-       "      <td>43466ST CLAIR WEST STATION4</td>\n",
-       "      <td>#REF!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -198,7 +193,8 @@
        "      <td>10</td>\n",
        "      <td>S</td>\n",
        "      <td>YU</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No Operator Immediately Available - Not E.S.A....</td>\n",
        "      <td>43.697778</td>\n",
        "      <td>-79.397222</td>\n",
        "      <td>Yonge University Spadina</td>\n",
@@ -207,12 +203,9 @@
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>2019</td>\n",
-       "      <td>43466DAVISVILLE STATION5</td>\n",
-       "      <td>#REF!</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -223,31 +216,29 @@
        "3   4  2019-01-01  3:26  Tuesday  ST CLAIR WEST STATION  EUATC          4   \n",
        "4   5  2019-01-01  8:04  Tuesday     DAVISVILLE STATION  MUNOA          5   \n",
        "\n",
-       "   min_gap bound line  ...   latitude   longitude                 line_name  \\\n",
-       "0       16     N   YU  ...  43.674584   -79.40683  Yonge University Spadina   \n",
-       "1       16     S   YU  ...  43.699209  -79.435819  Yonge University Spadina   \n",
-       "2       11     N   YU  ...  43.674584   -79.40683  Yonge University Spadina   \n",
-       "3        9     N   YU  ...  43.683888  -79.415113  Yonge University Spadina   \n",
-       "4       10     S   YU  ...  43.697778  -79.397222  Yonge University Spadina   \n",
+       "   min_gap bound line  vehicle  \\\n",
+       "0       16     N   YU     6061   \n",
+       "1       16     S   YU     5656   \n",
+       "2       11     N   YU     5381   \n",
+       "3        9     N   YU     5571   \n",
+       "4       10     S   YU        0   \n",
        "\n",
-       "     month  time_range month_number hour  year                         Index  \\\n",
-       "0  January  9PM-1:30AM            1    3  2019         43466DUPONT STATION11   \n",
-       "1  January  9PM-1:30AM            1    3  2019  43466EGLINTON WEST STATION11   \n",
-       "2  January  9PM-1:30AM            1    3  2019          43466DUPONT STATION6   \n",
-       "3  January  9PM-1:30AM            1    3  2019   43466ST CLAIR WEST STATION4   \n",
-       "4  January       5-9AM            1    8  2019      43466DAVISVILLE STATION5   \n",
+       "                                           code_info   latitude   longitude  \\\n",
+       "0                                        ATC Project  43.674584   -79.40683   \n",
+       "1                                 ATC RC&S Equipment  43.699209  -79.435819   \n",
+       "2                                 ATC RC&S Equipment  43.674584   -79.40683   \n",
+       "3                                 ATC RC&S Equipment  43.683888  -79.415113   \n",
+       "4  No Operator Immediately Available - Not E.S.A....  43.697778  -79.397222   \n",
        "\n",
-       "   Check  \n",
-       "0  #REF!  \n",
-       "1  #REF!  \n",
-       "2  #REF!  \n",
-       "3  #REF!  \n",
-       "4  #REF!  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "                  line_name    month  time_range  month_number  hour  year  \n",
+       "0  Yonge University Spadina  January  9PM-1:30AM             1     3  2019  \n",
+       "1  Yonge University Spadina  January  9PM-1:30AM             1     3  2019  \n",
+       "2  Yonge University Spadina  January  9PM-1:30AM             1     3  2019  \n",
+       "3  Yonge University Spadina  January  9PM-1:30AM             1     3  2019  \n",
+       "4  Yonge University Spadina  January       5-9AM             1     8  2019  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +261,7 @@
        "13732"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1e9d6f06eb8>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d899369a20>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ttc_subway_detail']"
+       "['ttc_subway_detail', 'stations_in_line']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2592,7 +2583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
