--- a/Machine Learning/model_2.ipynb
+++ b/Machine Learning/model_2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "4   -79.1923  Bloor Danforth      July      3-6PM           7.0  17.0  2018.0  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "4    COXWELL STATION        2.0      4.0      0.0           7.0  17.0  2018.0"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -383,9 +394,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
-    "from tensorflow.keras.utils import to_categorical\n",
     "X = df.drop(\"station\", axis=1)\n",
     "y = df[\"min_delay\"].values.reshape(-1, 1)\n",
     "print(X.shape, y.shape)"
@@ -393,16 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,48 +444,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1331</th>\n",
+       "      <th>12243</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5856.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2421</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5621.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2018.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2779</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5220.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>2019.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5875</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>5205.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>2019.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9439</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5089.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>2019.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8117</th>\n",
+       "      <td>3026.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>5243.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11114</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>5102.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4884</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5047.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8624</th>\n",
        "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5596.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>2018.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -485,15 +493,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      min_delay  min_gap  vehicle  month_number  hour    year\n",
-       "1331        3.0      6.0   5621.0           6.0  18.0  2018.0\n",
-       "2779        3.0      5.0   5220.0           1.0   8.0  2019.0\n",
-       "5875        4.0      8.0   5205.0           5.0  22.0  2019.0\n",
-       "9439        5.0      9.0   5089.0          12.0  13.0  2019.0\n",
-       "8117        5.0     10.0   5243.0           2.0   5.0  2018.0"
+       "       min_delay  min_gap  vehicle  month_number  hour    year\n",
+       "12243       10.0     15.0   5856.0          11.0   0.0  2019.0\n",
+       "2421         3.0      8.0   3026.0           5.0  10.0  2019.0\n",
+       "11114        7.0     13.0   5102.0          11.0   1.0  2019.0\n",
+       "4884         4.0      6.0   5047.0          10.0  19.0  2019.0\n",
+       "8624         5.0      8.0   5596.0           3.0  15.0  2018.0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8921, 6) (8921, 1)\n"
+      "(9986, 6) (9986, 1)\n"
      ]
     }
    ],
@@ -545,22 +553,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.03571429],\n",
+       "array([[0.28571429],\n",
        "       [0.03571429],\n",
-       "       [0.07142857],\n",
+       "       [0.17857143],\n",
        "       ...,\n",
        "       [0.07142857],\n",
        "       [0.03571429],\n",
        "       [0.10714286]])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4394, 6) (4394, 1)\n"
+      "(3329, 6) (3329, 1)\n"
      ]
     }
    ],
@@ -588,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,14 +605,23 @@
     "\n",
     "# create model\n",
     "model = Sequential()\n",
-    "model.add(Dense(units=5, activation='relu')) #how many units should we have?\n",
-    "model.add(Dense(units=10, activation='relu'))\n",
-    "model.add(Dense(units=40, activation='relu'))"
+    "model.add(Dense(units=12, activation='relu',kernel_initializer='normal')) #how many units should we have?\n",
+    "model.add(Dense(units=8, activation='relu'))\n",
+    "model.add(Dense(units=8, activation='linear'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mse', optimizer='adam', metrics=['mse','mae'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,103 +633,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 8921 samples\n",
+      "Train on 9986 samples\n",
       "Epoch 1/40\n",
-      "8921/8921 - 1s - loss: 33.9297 - accuracy: 0.0396\n",
+      "9986/9986 - 2s - loss: 5.4213 - accuracy: 0.0000e+00\n",
       "Epoch 2/40\n",
-      "8921/8921 - 0s - loss: 30.5159 - accuracy: 0.1430\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 3/40\n",
-      "8921/8921 - 0s - loss: 30.4832 - accuracy: 0.2117\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 4/40\n",
-      "8921/8921 - 0s - loss: 30.4699 - accuracy: 0.1660\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 5/40\n",
-      "8921/8921 - 0s - loss: 30.4618 - accuracy: 0.1342\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 6/40\n",
-      "8921/8921 - 0s - loss: 30.4571 - accuracy: 0.0963\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 7/40\n",
-      "8921/8921 - 0s - loss: 30.4541 - accuracy: 0.0474\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 8/40\n",
-      "8921/8921 - 0s - loss: 30.4519 - accuracy: 0.0083\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 9/40\n",
-      "8921/8921 - 0s - loss: 30.4504 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 10/40\n",
-      "8921/8921 - 0s - loss: 30.4493 - accuracy: 1.1210e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 11/40\n",
-      "8921/8921 - 0s - loss: 30.4485 - accuracy: 8.9676e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 12/40\n",
-      "8921/8921 - 0s - loss: 30.4478 - accuracy: 0.0025\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 13/40\n",
-      "8921/8921 - 0s - loss: 30.4473 - accuracy: 0.0036\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 14/40\n",
-      "8921/8921 - 0s - loss: 30.4469 - accuracy: 0.0036\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 15/40\n",
-      "8921/8921 - 0s - loss: 30.4466 - accuracy: 0.0028\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 16/40\n",
-      "8921/8921 - 0s - loss: 30.4463 - accuracy: 0.0034\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 17/40\n",
-      "8921/8921 - 0s - loss: 30.4461 - accuracy: 0.0029\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 18/40\n",
-      "8921/8921 - 0s - loss: 30.4459 - accuracy: 0.0038\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 19/40\n",
-      "8921/8921 - 0s - loss: 30.4458 - accuracy: 0.0024\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 20/40\n",
-      "8921/8921 - 0s - loss: 30.4457 - accuracy: 0.0016\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 21/40\n",
-      "8921/8921 - 0s - loss: 30.4456 - accuracy: 5.6048e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 22/40\n",
-      "8921/8921 - 0s - loss: 30.4455 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 23/40\n",
-      "8921/8921 - 0s - loss: 30.4455 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 24/40\n",
-      "8921/8921 - 0s - loss: 30.4454 - accuracy: 1.1210e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 25/40\n",
-      "8921/8921 - 0s - loss: 30.4454 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 26/40\n",
-      "8921/8921 - 0s - loss: 30.4454 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 27/40\n",
-      "8921/8921 - 0s - loss: 30.4454 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 28/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 29/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 30/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 2.2419e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 31/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 32/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 2.2419e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 33/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0000e+00\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 34/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 2.2419e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 35/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 7.8467e-04\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 36/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0025\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 37/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0028\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 38/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0081\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 39/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0067\n",
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n",
       "Epoch 40/40\n",
-      "8921/8921 - 0s - loss: 30.4453 - accuracy: 0.0084\n"
+      "9986/9986 - 1s - loss: 10.2099 - accuracy: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x236ff6cc438>"
+       "<tensorflow.python.keras.callbacks.History at 0x2b37cac1eb8>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,15 +746,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4394/4394 - 0s - loss: 30.3339 - accuracy: 0.0000e+00\n",
-      "Normal Neural Network - Loss: 30.333899468902462, Accuracy: 0.0\n"
+      "3329/3329 - 0s - loss: 10.2402 - accuracy: 0.0000e+00\n",
+      "Normal Neural Network - Loss: 10.240244282441441, Accuracy: 0.0\n"
      ]
     }
    ],
@@ -780,12 +797,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Sequential' object has no attribute 'score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-55d0a3c20ae0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# prediction result\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'score'"
+     ]
+    }
+   ],
    "source": [
-    "# prediction result\n",
-    "\n"
+    "# prediction result\n"
    ]
   },
   {
@@ -837,6 +865,29 @@
     "\n",
     "filename = 'best_model.sav'\n",
     "joblib.dump(best_model, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xnew = np.array([[40, 0, 26, 9000, 8000]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xnew= x_scaler.transform(Xnew)\n",
+    "ynew= model2.predict(Xnew)\n",
+    "#invert normalize\n",
+    "ynew = y_scaler.inverse_transform(ynew) \n",
+    "Xnew = x_scaler.inverse_transform(Xnew)\n",
+    "print(\"X=%s, Predicted=%s\" % (Xnew[0], ynew[0]))"
    ]
   }
  ],
