--- a/Machine Learning/model_1.ipynb
+++ b/Machine Learning/model_1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,147 +88,147 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7720.0</td>\n",
+       "      <td>7720</td>\n",
        "      <td>2018-02-13</td>\n",
        "      <td>6:57</td>\n",
        "      <td>Tuesday</td>\n",
        "      <td>BROADVIEW STATION</td>\n",
        "      <td>EUNT</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>W</td>\n",
        "      <td>BD</td>\n",
-       "      <td>5285.0</td>\n",
+       "      <td>5285</td>\n",
        "      <td>Equipment - No Trouble Found</td>\n",
        "      <td>43.4037</td>\n",
        "      <td>-79.2130</td>\n",
        "      <td>Bloor Danforth</td>\n",
        "      <td>February</td>\n",
        "      <td>5-9AM</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3147.0</td>\n",
+       "      <td>3147</td>\n",
        "      <td>2019-06-12</td>\n",
        "      <td>11:54</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>COXWELL STATION</td>\n",
        "      <td>TUNIP</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>W</td>\n",
        "      <td>BD</td>\n",
-       "      <td>5350.0</td>\n",
+       "      <td>5350</td>\n",
        "      <td>Operator Not In Position</td>\n",
        "      <td>43.4103</td>\n",
        "      <td>-79.1923</td>\n",
        "      <td>Bloor Danforth</td>\n",
        "      <td>June</td>\n",
        "      <td>9AM-12PM</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2019.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>11036.0</td>\n",
+       "      <td>11036</td>\n",
        "      <td>2018-07-31</td>\n",
        "      <td>17:05</td>\n",
        "      <td>Tuesday</td>\n",
        "      <td>COXWELL STATION</td>\n",
        "      <td>TUNOA</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>E</td>\n",
        "      <td>BD</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>No Operator Immediately Available</td>\n",
        "      <td>43.4103</td>\n",
        "      <td>-79.1923</td>\n",
        "      <td>Bloor Danforth</td>\n",
        "      <td>July</td>\n",
        "      <td>3-6PM</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11037.0</td>\n",
+       "      <td>11037</td>\n",
        "      <td>2018-07-31</td>\n",
        "      <td>17:33</td>\n",
        "      <td>Tuesday</td>\n",
        "      <td>COXWELL STATION</td>\n",
        "      <td>TUNOA</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>E</td>\n",
        "      <td>BD</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>No Operator Immediately Available</td>\n",
        "      <td>43.4103</td>\n",
        "      <td>-79.1923</td>\n",
        "      <td>Bloor Danforth</td>\n",
        "      <td>July</td>\n",
        "      <td>3-6PM</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>11038.0</td>\n",
+       "      <td>11038</td>\n",
        "      <td>2018-07-31</td>\n",
        "      <td>17:40</td>\n",
        "      <td>Tuesday</td>\n",
        "      <td>COXWELL STATION</td>\n",
        "      <td>TUNOA</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>W</td>\n",
        "      <td>BD</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>No Operator Immediately Available</td>\n",
        "      <td>43.4103</td>\n",
        "      <td>-79.1923</td>\n",
        "      <td>Bloor Danforth</td>\n",
        "      <td>July</td>\n",
        "      <td>3-6PM</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id        date   time        day            station   code  min_delay  \\\n",
-       "0   7720.0  2018-02-13   6:57    Tuesday  BROADVIEW STATION   EUNT        2.0   \n",
-       "1   3147.0  2019-06-12  11:54  Wednesday    COXWELL STATION  TUNIP        2.0   \n",
-       "2  11036.0  2018-07-31  17:05    Tuesday    COXWELL STATION  TUNOA        2.0   \n",
-       "3  11037.0  2018-07-31  17:33    Tuesday    COXWELL STATION  TUNOA        2.0   \n",
-       "4  11038.0  2018-07-31  17:40    Tuesday    COXWELL STATION  TUNOA        2.0   \n",
+       "      id        date   time        day            station   code  min_delay  \\\n",
+       "0   7720  2018-02-13   6:57    Tuesday  BROADVIEW STATION   EUNT          2   \n",
+       "1   3147  2019-06-12  11:54  Wednesday    COXWELL STATION  TUNIP          2   \n",
+       "2  11036  2018-07-31  17:05    Tuesday    COXWELL STATION  TUNOA          2   \n",
+       "3  11037  2018-07-31  17:33    Tuesday    COXWELL STATION  TUNOA          2   \n",
+       "4  11038  2018-07-31  17:40    Tuesday    COXWELL STATION  TUNOA          2   \n",
        "\n",
        "   min_gap bound line  vehicle                           code_info  latitude  \\\n",
-       "0      4.0     W   BD   5285.0        Equipment - No Trouble Found   43.4037   \n",
-       "1      5.0     W   BD   5350.0            Operator Not In Position   43.4103   \n",
-       "2      4.0     E   BD      0.0  No Operator Immediately Available    43.4103   \n",
-       "3      4.0     E   BD      0.0  No Operator Immediately Available    43.4103   \n",
-       "4      4.0     W   BD      0.0  No Operator Immediately Available    43.4103   \n",
+       "0        4     W   BD     5285        Equipment - No Trouble Found   43.4037   \n",
+       "1        5     W   BD     5350            Operator Not In Position   43.4103   \n",
+       "2        4     E   BD        0  No Operator Immediately Available    43.4103   \n",
+       "3        4     E   BD        0  No Operator Immediately Available    43.4103   \n",
+       "4        4     W   BD        0  No Operator Immediately Available    43.4103   \n",
        "\n",
-       "   longitude       line_name     month time_range  month_number  hour    year  \n",
-       "0   -79.2130  Bloor Danforth  February      5-9AM           2.0   6.0  2018.0  \n",
-       "1   -79.1923  Bloor Danforth      June   9AM-12PM           6.0  11.0  2019.0  \n",
-       "2   -79.1923  Bloor Danforth      July      3-6PM           7.0  17.0  2018.0  \n",
-       "3   -79.1923  Bloor Danforth      July      3-6PM           7.0  17.0  2018.0  \n",
-       "4   -79.1923  Bloor Danforth      July      3-6PM           7.0  17.0  2018.0  "
+       "   longitude       line_name     month time_range  month_number  hour  year  \n",
+       "0   -79.2130  Bloor Danforth  February      5-9AM             2     6  2018  \n",
+       "1   -79.1923  Bloor Danforth      June   9AM-12PM             6    11  2019  \n",
+       "2   -79.1923  Bloor Danforth      July      3-6PM             7    17  2018  \n",
+       "3   -79.1923  Bloor Danforth      July      3-6PM             7    17  2018  \n",
+       "4   -79.1923  Bloor Danforth      July      3-6PM             7    17  2018  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -277,13 +279,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>station</th>\n",
        "      <th>min_delay</th>\n",
        "      <th>min_gap</th>\n",
        "      <th>vehicle</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
        "      <th>month_number</th>\n",
        "      <th>hour</th>\n",
        "      <th>year</th>\n",
@@ -292,97 +291,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7720.0</td>\n",
        "      <td>BROADVIEW STATION</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5285.0</td>\n",
-       "      <td>43.4037</td>\n",
-       "      <td>-79.2130</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5285</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3147.0</td>\n",
        "      <td>COXWELL STATION</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5350.0</td>\n",
-       "      <td>43.4103</td>\n",
-       "      <td>-79.1923</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2019.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5350</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>11036.0</td>\n",
        "      <td>COXWELL STATION</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>43.4103</td>\n",
-       "      <td>-79.1923</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11037.0</td>\n",
        "      <td>COXWELL STATION</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>43.4103</td>\n",
-       "      <td>-79.1923</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>11038.0</td>\n",
        "      <td>COXWELL STATION</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>43.4103</td>\n",
-       "      <td>-79.1923</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>2018.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id            station  min_delay  min_gap  vehicle  latitude  \\\n",
-       "0   7720.0  BROADVIEW STATION        2.0      4.0   5285.0   43.4037   \n",
-       "1   3147.0    COXWELL STATION        2.0      5.0   5350.0   43.4103   \n",
-       "2  11036.0    COXWELL STATION        2.0      4.0      0.0   43.4103   \n",
-       "3  11037.0    COXWELL STATION        2.0      4.0      0.0   43.4103   \n",
-       "4  11038.0    COXWELL STATION        2.0      4.0      0.0   43.4103   \n",
-       "\n",
-       "   longitude  month_number  hour    year  \n",
-       "0   -79.2130           2.0   6.0  2018.0  \n",
-       "1   -79.1923           6.0  11.0  2019.0  \n",
-       "2   -79.1923           7.0  17.0  2018.0  \n",
-       "3   -79.1923           7.0  17.0  2018.0  \n",
-       "4   -79.1923           7.0  17.0  2018.0  "
+       "             station  min_delay  min_gap  vehicle  month_number  hour  year\n",
+       "0  BROADVIEW STATION          2        4     5285             2     6  2018\n",
+       "1    COXWELL STATION          2        5     5350             6    11  2019\n",
+       "2    COXWELL STATION          2        4        0             7    17  2018\n",
+       "3    COXWELL STATION          2        4        0             7    17  2018\n",
+       "4    COXWELL STATION          2        4        0             7    17  2018"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Drop the null rows, and everything that is not a float except station\n",
-    "df = df.dropna().drop(['id','date','time','day','code','bound','line','code_info','line_name','month','time_range',\"latitude\",\"longitude\"], axis=1)\n",
+    "df = df.dropna().drop(['id','date','time','day',\n",
+    "                       'code','bound','line','code_info',\n",
+    "                       'line_name','month','time_range',\"latitude\",\n",
+    "                       \"longitude\"], axis=1)\n",
     "df.head()"
    ]
   },
@@ -396,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13315, 9) (13315,)\n"
+      "(13315, 6) (13315,)\n"
      ]
     }
    ],
@@ -428,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1110,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "nteract": {
    "version": "0.12.3"
