update YU line LR

--- a/Machine Learning/YU line LR 3 features.ipynb
+++ b/Machine Learning/YU line LR 3 features.ipynb
@@ -1043,6 +1043,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## no scale due to all features are transformed from get_dummies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fit scaled_train data to model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.04347659841197238\n",
+      "Testing Score: 0.015966231812192366\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comparing train score and test score\n",
+    "training_score = model.score(X_train, y_train)\n",
+    "testing_score = model.score(X_test, y_test)\n",
+    "\n",
+    "print(f\"Training Score: {training_score}\")\n",
+    "print(f\"Testing Score: {testing_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make dataframe to compare prediction and actual data\n",
+    "pd.DataFrame({\"Prediction\": predictions.flatten(), \"Actual\": y_test.flatten()})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1181,34 +1246,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction: [[7.8394659 ]\n",
-      " [5.79960995]\n",
-      " [4.66875057]\n",
-      " ...\n",
-      " [5.37578182]\n",
-      " [5.05742245]\n",
-      " [6.42558651]]\n",
-      " Actual: [[11]\n",
-      " [ 6]\n",
-      " [10]\n",
-      " ...\n",
-      " [ 4]\n",
-      " [ 5]\n",
-      " [ 4]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>7.839466</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>5.799610</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4.668751</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>5.982227</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5.615040</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4180</td>\n",
+       "      <td>5.484180</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4181</td>\n",
+       "      <td>5.413868</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4182</td>\n",
+       "      <td>5.375782</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4183</td>\n",
+       "      <td>5.057422</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4184</td>\n",
+       "      <td>6.425587</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4185 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Prediction  Actual\n",
+       "0       7.839466      11\n",
+       "1       5.799610       6\n",
+       "2       4.668751      10\n",
+       "3       5.982227       6\n",
+       "4       5.615040      23\n",
+       "...          ...     ...\n",
+       "4180    5.484180       4\n",
+       "4181    5.413868       9\n",
+       "4182    5.375782       4\n",
+       "4183    5.057422       5\n",
+       "4184    6.425587       4\n",
+       "\n",
+       "[4185 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# make dataframe to compare prediction and actual data\n",
-    "print(f\"Prediction: {predictions}\")\n",
-    "print(f\" Actual: {y_test}\")"
+    "pd.DataFrame({\"Prediction\": predictions.flatten(), \"Actual\": y_test.flatten()})"
    ]
   },
   {
